fix vertical alignement in tables

--- a/packages/scss/src/components/statusBadge/component.scss
+++ b/packages/scss/src/components/statusBadge/component.scss
@@ -13,7 +13,7 @@
 	&::before {
 		background-color: var(--palettes-700, var(--palettes-product-700));
 		border-radius: var(--commons-borderRadius-full);
-		content: '';
+		content: "\a0"; // Unbreakable space to avoid vertical alignement issues with inline-flex in some contexts like tables
 		display: block;
 		height: var(--components-statusBadge-dot-size);
 		flex-shrink: 0;
